--- a/views/my-apps.ejs
+++ b/views/my-apps.ejs
@@ -212,7 +212,7 @@ body{
 
 <div class="mobile-nav">
     <a href="/student-dash" class="nav-item"><div>🔍</div>Explore</a>
-    <a href="/my-applications" class="nav-item active"><div>📝</div>Track</a>
+    <a href="/my-applications" class="nav-item active"><div>📝</div>Track Applications</a>
     <a href="/profile" class="nav-item"><div>👤</div>Profile</a>
 </div>
 
