--- a/views/teacher-dash.ejs
+++ b/views/teacher-dash.ejs
@@ -222,7 +222,7 @@ input:focus {
     </form>
   </div>
 
-  <input id="search" class="search" placeholder="Search internships...">
+  <input style="border: #0f172a;border-radius: 2px;" id="search" class="search" placeholder="Search internships/jobs...">
 
   <!-- Internship List -->
   <% internships.forEach(job => { %>
